--- a/Nana.protocol/Codice.html
+++ b/Nana.protocol/Codice.html
@@ -625,7 +625,7 @@
         <div class="modal" id="choiceMessageModal" aria-hidden="true">
             <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="choiceMessageText">
                 <p id="choiceMessageText"></p>
-                <button id="choiceMessageOk" type="button">Ok</button>
+                <button id="choiceMessageOk" type="button">Riprova</button>
             </div>
         </div>
 
@@ -644,7 +644,7 @@
 
            <div class="final-screen" id="finalScreen" aria-hidden="true">
             <div>
-                <h2>Buon San Valentino Amore mio!!</h2>
+                <h2>Buon San Valentino Amore Mio!!</h2>
                 <div class="heart">💕</div>
             </div>
            </div>
